plang/testing/logs/false-incorrect/54/program54.p.p
yP (lh a).


qY :- (i4E (I) o (jxg) (U), adZe (lmi sb (fA (mGzlC (dT9 (W) E (vLIOV))) (s2 CW (qUpQi (hfC9 vOb c cz8Z (VxHw)) (X) Z) l Si)) k5amC (TKpS)) cLT; bn4NE tO (XnVXc), gEgO MwwSm, sK9N), ((l, qdG9E); tH6W, h (ikvPG); nF1 (Zdi) (u Xtw tu aX)).

pa2.
u9zuW (WV) (qru (uwHK) (LilGE) dCwN2 EaX18).
mjyLy fhB (VhX) (TJj5v) :- ((lVmg (J8A) p4OA; (pU oqQj))), tGaS (SKBZk) dBfUw gi5; (n UR3U rQ (vkc (rSpx TrG (Q1) y (hvCZ elD (K))) (SXS) (clwcN (WI46))) (Ra4Yn)), (fC (xSM (vLA (icD r (VLX12) rg))) Msj Pigjy NZui).


h HX V29 PKsT.


aq (w s (H3N) (TpI)) (o) (WrC) (ke YG n (q (S) RE)).

p2nW C (NJrHi) (J8) :- tKQhO cwfE c5 (Vcdxb).

p SKHXH Y6Zj (QZ) (uza (YEAO)) :- (nGaR4 Q eC6Z), rxLf, z (Pqe) WQGl vKz1s (CUOSk), xD (Qt7); vDiK (ft (fU (l9 (vE Fxek Ae (emxJY (z)) jy) iV Gqd)) (vOq W)), cB57 x4t (BI53).

zTA.


dXZPH gY :- g3 (UzN) (m (vpdRM (L)) wMVi); hh ZSr (mviPJ (j (j ekP6 yLzj6 ffu41 (Ay)) (L) l (AkM)) (L8vUN)) Xu l4e, ((iTrlp bjib (n) (lE (bd7Ik (Ojz2) Kvkv h4 s) y) Y1SvX)); aWU2, (vW (o42l (s)) (Buzf) (XdC1) YGF); (tWBlv HD n zEZkG uwTX), w7d (Z) (wTck (Ngb) i) OVW C; dNF (N9) aLgJ3 (Lye); (k84IF t4h (T) (Wg)), (acSg (Qr), upF0).
yfzCI (I).
qky TKU3 G (oe3PN (h7 lpBz1 (o8z B f (fJ dv (p (QYW)))) ZEpl (tle (M76eZ) FUshH (yyI PD9 kUa))) t (xn lai IuRdJ YxJ) (SUeg)) :- ((ggD (u QB (fuQ (rW br0Kv NPOlj li E1X9Q))), q1 cmWVd, m0Riy; qk4 mgud (w ak (F)))); qs (VZr) (s (XG8a)) SGVhY (E0Q).
? gJ.

